--- a/ansible/roles/actual/vars/main.yml
+++ b/ansible/roles/actual/vars/main.yml
@@ -14,3 +14,4 @@ actual_env_file: "actual.env"
 actual_oidc_client_id_name: "{{ actual_app_name }}_oidc_client_id"
 actual_oidc_client_secret_name: "{{ actual_app_name }}_oidc_client_secret"
 actual_oidc_client_secret_hash_name: "{{ actual_app_name }}_oidc_client_secret_hash"
+actual_oidc_client_config_marker: "# {mark} {{ actual_app_name | upper }} OIDC CLIENT CONFIG"
