--- a/ansible/roles/fusion/tasks/main.yml
+++ b/ansible/roles/fusion/tasks/main.yml
@@ -31,11 +31,13 @@
       - |
         [Unit]
         Description={{ fusion_app_name }} Container Service
+        ReloadPropagatedFrom={{ evilwoods_service_target }}
+        StopPropagatedFrom={{ evilwoods_service_target }}
       - |
         [Service]
         Restart=always
       - |
         [Install]
-        WantedBy=default.target
+        WantedBy={{ evilwoods_service_target }}
   notify:
     - "Restart {{ fusion_app_name }}"
