--- a/ansible/roles/cloudflared/tasks/main.yml
+++ b/ansible/roles/cloudflared/tasks/main.yml
@@ -18,6 +18,8 @@
       - |
         [Unit]
         Description={{ cloudflared_app_name }} container
+        ReloadPropagatedFrom={{ evilwoods_service_target }}
+        StopPropagatedFrom={{ evilwoods_service_target }}
       - |
         [Service]
         EnvironmentFile={{ evilwoods_runner_home }}/.config/bws/env
@@ -25,5 +27,5 @@
         Restart=always
       - |
         [Install]
-        WantedBy=default.target
+        WantedBy={{ evilwoods_service_target }}
   notify: "Restart {{ cloudflared_app_name }}"
