--- a/ansible/roles/kitchenowl/vars/main.yml
+++ b/ansible/roles/kitchenowl/vars/main.yml
@@ -1,17 +1,22 @@
 kitchenowl_app_name: "{{ ansible_role_name }}"
 kitchenowl_container_quadlet: "{{ kitchenowl_app_name }}.container"
 kitchenowl_container_name: "{{ evilwoods_container_name_prefix }}{{ kitchenowl_app_name }}"
+kitchenowl_service_name: "{{ kitchenowl_app_name }}.service"
 kitchenowl_image: "docker.io/tombursch/kitchenowl:v0.7.3"
 kitchenowl_data: "{{ evilwoods_service_storage_d }}/{{ kitchenowl_app_name }}"
 kitchenowl_volume_d: "{{ kitchenowl_data }}/volumes"
 kitchenowl_data_volume: "{{ kitchenowl_volume_d }}/data"
 kitchenowl_script_d: "{{ kitchenowl_data }}/scripts"
+kitchenowl_backup_d: "{{ evilwoods_service_backup_d }}/{{ kitchenowl_app_name }}"
 kitchenowl_url: "{{ kitchenowl_app_name }}.{{ evilwoods_domain_name }}"
 kitchenowl_jwt_secret_name: "{{ kitchenowl_app_name }}_jwt_secret"
 
 kitchenowl_get_secrets_script_name: "{{ kitchenowl_app_name }}-get-secrets.sh"
-kitchenowl_get_secrets_script: "{{ kitchenowl_script_dir }}/{{ kitchenowl_get_secrets_script_name }}"
-kitchenowl_backup_script: "{{ kitchenowl_app_name }}-backup.xonsh"
+kitchenowl_get_secrets_script: "{{ kitchenowl_script_d }}/{{ kitchenowl_get_secrets_script_name }}"
+kitchenowl_backup_script: "{{ kitchenowl_app_name }}-backup.bash"
+kitchenowl_backup_service_name: "{{ kitchenowl_app_name }}-backup"
+kitchenowl_backup_service: "{{ kitchenowl_backup_service_name }}.service"
+kitchenowl_backup_timer: "{{ kitchenowl_backup_service_name }}.timer"
 
 kitchenowl_oidc_client_name: "{{ kitchenowl_app_name }}_oidc_client_id"
 kitchenowl_oidc_client_secret_name: "{{ kitchenowl_app_name }}_oidc_client_secret"
