--- a/ansible/roles/kitchenowl/vars/main.yml
+++ b/ansible/roles/kitchenowl/vars/main.yml
@@ -3,9 +3,9 @@ kitchenowl_container_quadlet: "{{ kitchenowl_app_name }}.container"
 kitchenowl_container_name: "{{ evilwoods_container_name_prefix }}{{ kitchenowl_app_name }}"
 kitchenowl_image: "docker.io/tombursch/kitchenowl:v0.7.3"
 kitchenowl_data: "{{ evilwoods_service_storage_d }}/{{ kitchenowl_app_name }}"
-kitchenowl_volume_dir: "{{ kitchenowl_data }}/volumes"
-kitchenowl_data_volume: "{{ kitchenowl_volume_dir }}/data"
-kitchenowl_script_dir: "{{ kitchenowl_data }}/scripts"
+kitchenowl_volume_d: "{{ kitchenowl_data }}/volumes"
+kitchenowl_data_volume: "{{ kitchenowl_volume_d }}/data"
+kitchenowl_script_d: "{{ kitchenowl_data }}/scripts"
 kitchenowl_url: "{{ kitchenowl_app_name }}.{{ evilwoods_domain_name }}"
 kitchenowl_jwt_secret_name: "{{ kitchenowl_app_name }}_jwt_secret"
 
