--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -28,7 +28,7 @@ jobs:
           package-name: ${{ env.IMAGE_NAME }}
           package-type: container
           min-versions-to-keep: 10
-          token: ${{ gitub.token }}
+          token: ${{ github.token }}
 
       - name: Checkout repo
         uses: actions/checkout@v4.1.1
