--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -22,6 +22,23 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: cleanup untagged images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ env.IMAGE_NAME }}
+          package-type: container
+          min-versions-to-keep: 0
+          delete-only-untagged-versions: true
+          token: ${{ github.token }}
+
+      - name: cleanup old images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ env.IMAGE_NAME }}
+          package-type: container
+          min-versions-to-keep: 20
+          token: ${{ github.token }}
+
       - name: Checkout repo
         uses: actions/checkout@v4.1.1
 
