--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -22,12 +22,21 @@ jobs:
       packages: write
       contents: read
     steps:
-      - name: cleanup old image
+      - name: cleanup untagged images
         uses: actions/delete-package-versions@v5
         with:
           package-name: ${{ env.IMAGE_NAME }}
           package-type: container
-          min-versions-to-keep: 10
+          min-versions-to-keep: 0
+          delete-only-untagged-versions: true
+          token: ${{ github.token }}
+
+      - name: cleanup old images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ env.IMAGE_NAME }}
+          package-type: container
+          min-versions-to-keep: 20
           token: ${{ github.token }}
 
       - name: Checkout repo
