--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4.1.1
 
+      - name: Set current date as variable
+        run: echo "TAG_CURRENT_DATE=$(date +%Y%m%d)" >> $GITHUB_ENV
+
       - name: Build container image
         id: build-image
         uses: redhat-actions/buildah-build@v2.13
@@ -49,7 +52,7 @@ jobs:
           context: "./bootc/evilwoods-desktop"
           containerfiles: "./bootc/evilwoods-desktop/Containerfile"
           image: ${{ env.IMAGE_NAME }}
-          tags: latest ${{ github.sha }}
+          tags: latest ${{ github.sha }} ${{ env.TAG_CURRENT_DATE }}
           layers: false
           oci: true
 
