--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Set current date as variable
-        run: echo "TAG_CURRENT_DATE=$(date +%Y%m%d)" >> $GITHUB_ENV
+        run: echo "TAG_CURRENT_DATE=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
 
       - name: Build container image
         id: build-image
