--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -39,6 +39,9 @@ jobs:
           min-versions-to-keep: 20
           token: ${{ github.token }}
 
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3
+
       - name: Checkout repo
         uses: actions/checkout@v4.1.1
 
