--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -59,11 +59,24 @@ jobs:
           layers: false
           oci: true
 
+      - name: Log in to ghcr.io
+        uses: redhat-actions/podman-login@v1.7
+        with:
+          registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASSWORD }}
+
       - name: Push to ghcr.io
         uses: redhat-actions/push-to-registry@v2.6
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
           registry: ${{ env.IMAGE_REGISTRY }}
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASSWORD }}
+
+      - name: Sign image
+        run: |
+          DIGEST=$(skopeo inspect docker://${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:latest | jq -r '.Digest')
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${DIGEST}
+        env:
+          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY  }}
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
