--- a/ansible/inventory-dev.yml
+++ b/ansible/inventory-dev.yml
@@ -19,6 +19,11 @@ evilwoods:
       actual_oidc_client_id: "14052283-150a-4b73-ac6d-b308014b7b52"
       actual_oidc_client_secret_id: "9043d4a5-8cba-474a-a7b0-b2f10138b9c0"
       actual_oidc_client_secret_hash_id: "38760582-4283-4408-870b-b2f10138ffb7"
+
+      miniflux_oidc_client_id: "b7291109-ee96-4067-af1c-b328009d4d7b"
+      miniflux_oidc_client_secret_id: "010f3866-ee04-4793-a931-b328009df494"
+      miniflux_oidc_client_secret_hash_id: "c0ed20e2-47fc-4d59-9593-b328009e4f74"
+
       restic_backup_repo: s3:https://s3.eu-central-003.backblazeb2.com/evilcloud-restic-backup-dev
       restic_backup_aws_access_key_id: "543c6eef-3ba5-46fb-81ac-b32600820da3"
       restic_backup_aws_secret_access_key: "9c501306-56b2-404c-b8dc-b32600825164"
