--- a/ansible/roles/actual/vars/main.yml
+++ b/ansible/roles/actual/vars/main.yml
@@ -15,3 +15,9 @@ actual_oidc_client_id_name: "{{ actual_app_name }}_oidc_client_id"
 actual_oidc_client_secret_name: "{{ actual_app_name }}_oidc_client_secret"
 actual_oidc_client_secret_hash_name: "{{ actual_app_name }}_oidc_client_secret_hash"
 actual_oidc_client_config_marker: "# {mark} {{ actual_app_name | upper }} OIDC CLIENT CONFIG"
+
+actual_backup_d: "{{ evilwoods_service_backup_d }}/{{ actual_app_name }}"
+actual_backup_script: "{{ actual_app_name }}-backup.bash"
+actual_backup_service_name: "{{ actual_app_name }}-backup"
+actual_backup_service: "{{ actual_backup_service_name }}.service"
+actual_backup_timer: "{{ actual_backup_service_name }}.timer"
