--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -37,6 +37,9 @@ jobs:
           min-versions-to-keep: 1
           token: ${{ github.token }}
 
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3
+
       - name: Checkout repo
         uses: actions/checkout@v4.1.1
 
@@ -67,3 +70,11 @@ jobs:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
           registry: ${{ env.IMAGE_REGISTRY }}
+
+      - name: Sign image
+        run: |
+          DIGEST=$(skopeo inspect docker://${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:latest | jq -r '.Digest')
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${DIGEST}
+        env:
+          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY  }}
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
