--- a/.github/workflows/build-evilwoods-binary-cache.yml
+++ b/.github/workflows/build-evilwoods-binary-cache.yml
@@ -20,22 +20,22 @@ jobs:
       packages: write
       contents: read
     steps:
-      # - name: cleanup untagged images
-      #   uses: actions/delete-package-versions@v5
-      #   with:
-      #     package-name: ${{ env.IMAGE_NAME }}
-      #     package-type: container
-      #     min-versions-to-keep: 0
-      #     delete-only-untagged-versions: true
-      #     token: ${{ github.token }}
-      #
-      # - name: cleanup old images
-      #   uses: actions/delete-package-versions@v5
-      #   with:
-      #     package-name: ${{ env.IMAGE_NAME }}
-      #     package-type: container
-      #     min-versions-to-keep: 1
-      #     token: ${{ github.token }}
+      - name: cleanup untagged images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ env.IMAGE_NAME }}
+          package-type: container
+          min-versions-to-keep: 0
+          delete-only-untagged-versions: true
+          token: ${{ github.token }}
+
+      - name: cleanup old images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ env.IMAGE_NAME }}
+          package-type: container
+          min-versions-to-keep: 1
+          token: ${{ github.token }}
 
       - name: Checkout repo
         uses: actions/checkout@v4.1.1
